--- a/Common/Makefile
+++ b/Common/Makefile
@@ -6,6 +6,11 @@ all:		Common.a
 Common.a:	$(OBJECTS)
 	$(AR) rcs Common.a $(OBJECTS)
 
+-include $(OBJECTS:.o=.d)
+%.o: %.cpp
+		$(CXX) $(CFLAGS) -c -o $@ $<
+		$(CXX) -MM $(CFLAGS) $< > $*.d
+
 .PHONY: clean
 clean:
 	$(RM) Common.a *.o *.d *.bak *~
