Add dummy repeater parameters

--- a/FM2DStar/FM2DStar.ini
+++ b/FM2DStar/FM2DStar.ini
@@ -1,6 +1,6 @@
 [General]
 # The callsign is configured below, this is the callsign appearing on the DStar networks
-Callsign=N0CALl
+Callsign=N0CALL
 Suffix=FM
 Daemon=1
 
@@ -16,3 +16,8 @@ MMDVMHostAddress=127.0.0.1
 MMDVMHostPort=3810
 LocalAddress=127.0.0.1
 LocalPort=4810
+
+[DummyRepeater]
+#This is the callsign used for the dummy repeater, if left unset GeneralCallsign is used
+#Callsign=N0CALL
+Band=B
