--- a/FMParrot/Makefile
+++ b/FMParrot/Makefile
@@ -1,8 +1,9 @@
-CC      = gcc
-CXX     = g++
+CC      = cc
+CXX     = c++
 CFLAGS  = -g -O3 -Wall -std=c++0x -pthread
 LIBS    = -lpthread
 LDFLAGS = -g
+export
 
 OBJECTS = FMParrot.o Parrot.o Thread.o Timer.o
 
