Add Dongle config

--- a/FM2DStar/FM2DStar.ini
+++ b/FM2DStar/FM2DStar.ini
@@ -18,6 +18,20 @@ LocalAddress=127.0.0.1
 LocalPort=4810
 
 [DummyRepeater]
-#This is the callsign used for the dummy repeater, if left unset GeneralCallsign is used
-#Callsign=N0CALL
+# This is the callsign used for the dummy repeater, if left unset GeneralCallsign is used
+# Callsign=N0CALL
 Band=B
+
+[Dongle]
+#	1 = DVDONGLE,
+#	2 = DV3000_NETWORK,
+#	3 = DV3000_SERIAL,
+#	4 = STARDV_NETWORK,
+#	5 = STARDV_NETWORK2,
+#	6 = DVMEGA_AMBE
+Type=1
+# The two parameters below are only used for network dongles
+Address=127.0.0.1
+Port=2460
+# Only used for dongles connected directly to computer
+SerialPort=/dev/ttyUSB0
