Add CUtils and RepeaterProtocolHandler

--- a/FM2DStar/Makefile
+++ b/FM2DStar/Makefile
@@ -5,7 +5,8 @@ LIBS    = -lpthread
 LDFLAGS = -g
 export
 
-OBJECTS = Conf.o CCITTChecksumReverse.o DongleThread.o DVDongleController.o DVDongleThread.o FIRFilter.o FM2DStar.o HeaderData.o SerialDataController.o
+OBJECTS = Conf.o CCITTChecksumReverse.o DongleThread.o DVDongleController.o DVDongleThread.o FIRFilter.o HeaderData.o \
+		  FM2DStar.o RepeaterProtocolHandler.o SerialDataController.o
 
 .PHONY: all
 all:		FM2DStar
